add welcome screen

--- a/apps/starkitchen/index.html
+++ b/apps/starkitchen/index.html
@@ -5,10 +5,10 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/starkitchen-logo-transparent.png"
+      href="/starkwars_logo.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StarKitchen | Best kitchen in Natanya</title>
+    <title>StarkWars</title>
   </head>
   <body>
     <div id="root"></div>
